--- a/src/components/Styles/sMain.css
+++ b/src/components/Styles/sMain.css
@@ -141,15 +141,18 @@
 
 #logout-button {
     width: 90%;
-    height: 40px;
+    height: 50px;
     background-color: #CB1E2A;
     color: #ffffff;
     border-radius: 8px;
     border-width: 0px;
     cursor: pointer;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.40);
     margin-bottom: 40px;
     font-family: 'Poppins-Bold';
+}
+
+#logout-button:hover {
+    opacity: 0.5;
 }
 
 /*! Main Content */
